# ska-src-maltopuft-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitlab.ci.yaml  .gitmodules  .readthedocs.yaml  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_13_1626-d3d424ed8f75_create_user_table.py  2024_05_13_1637-87e2e3f6be9c_add_timestampmixin_to_user_table.py  2024_05_13_1738-b25703735700_add_candidate_model.py  2024_05_13_1815-5f542c987eb8_add_spcandidate_table.py  2024_05_13_1857-3954336bed7e_add_entity_and_label_tables.py  2024_05_17_1209-ca0fac6d1f6a_unique_spcandidate_candidate_id.py  2024_06_12_1810-5f2f21c8df0c_unique_entities.py  2024_06_27_0948-4cdc5297d69a_unique_labels.py  2024_07_01_0917-eef6ab50c536_rename_spcandidate_data_path.py  2024_07_05_1315-442b90f93f12_teal_505_define_scheduleblock_model.py  2024_07_05_1346-b54b8dd660e0_teal_505_define_meerkatscheduleblock_.py  2024_07_05_1418-aaceda90f7de_teal_505_define_coherentbeamconfig_model.py  2024_07_05_1719-6fed15bc581a_teal_505_define_initial_observation_.py  2024_07_08_1322-473ad72b94ee_teal_505_add_columns_to_observation_.py  2024_07_09_0950-d1c23b8223bb_teal_505_define_tilingconfig_model.py  2024_07_09_1017-02ca2e21748e_teal_505_define_beam_model.py  2024_07_09_1037-d683ddaa5054_teal_505_define_host_model.py  2024_07_09_1613-fc4d99bbdf16_teal_505_add_beam_id_fk_to_candidate_.py  2024_07_10_1139-1ee0728a4b6f_teal_505_add_host_id_fk_to_beam_model.py  2024_08_07_0931-e84e368b1f23_pulsar_catalogue_models.py  2024_08_07_1056-572423489f3f_add_pos_attribute_to_candidate_model.py  2024_08_22_1651-abac0168c671_deprecate_user_email.py  2024_10_03_1144-234732fe6c09_create_entities.py  2024_10_25_1402-6d975c10c6ce_move_updated_at_to_candidate_table.py  2024_11_01_1126-8f80e6af6846_update_unique_contraints.py  2024_11_27_1520-05b5e079a2a4_decimal_ra_dec_attributes.py  2024_11_28_1102-c75dc35baec6_decimal_ra_dec_attributes.py
docker/: Dockerfile  docker-compose.local.yaml  docker-compose.yaml  test.docker-compose.yaml
docker/data/: Dockerfile
docker/postgres/: initdb-pgsphere.sh
docs/src/: conf.py  index.rst
docs/src/_static/css/: custom.css
docs/src/_templates/: class-template.rst  module-template.rst
docs/src/package/: api.rst  guide.rst
docs/src/pages/: account.rst  auth.rst  crud.rst  getting-started.md  maltopuft.rst  project-structure.rst  project-tooling.md
docs/src/pages/developer-guide/: auth.rst  crud.rst  getting-started.md  maltopuft.rst  project-structure.rst  project-tooling.rst
docs/src/pages/user-guide/: account.rst  usage.rst
src/: __init__.py  main.py
src/api/: __init__.py  root.py
src/api/v1/: __init__.py  health.py  users.py
src/core/: server.py
src/ska_src_maltopuft_backend/: __init__.py
src/ska_src_maltopuft_backend/api/v1/: __init__.py  auth.py  health.py  users.py
src/ska_src_maltopuft_backend/app/: __init__.py
src/ska_src_maltopuft_backend/app/api/: __init__.py  responses.py
src/ska_src_maltopuft_backend/app/controllers/: __init__.py
src/ska_src_maltopuft_backend/app/models/: __init__.py  user.py
src/ska_src_maltopuft_backend/app/repositories/: __init__.py
src/ska_src_maltopuft_backend/app/schemas/: __init__.py
src/ska_src_maltopuft_backend/candle/: __init__.py  controller.py  entity.py  extras.py  models.py  repository.py  requests.py  responses.py  router.py
src/ska_src_maltopuft_backend/catalogue/: __init__.py  controller.py  models.py  repository.py  requests.py  responses.py  router.py
src/ska_src_maltopuft_backend/core/: __init__.py  auth.py  config.py  controller.py  database.py  exceptions.py  extras.py  factory.py  oauth.py  repository.py  schemas.py  server.py
src/ska_src_maltopuft_backend/core/auth/: __init__.py  auth_backend.py  authenticated.py  authorization_checker.py  exceptions.py  schemas.py
src/ska_src_maltopuft_backend/core/database/: __init__.py  base.py  database.py  init_db.py
src/ska_src_maltopuft_backend/core/dependencies/: authentication.py  authorization.py
src/ska_src_maltopuft_backend/core/mixins/: __init__.py  timestamp.py
src/ska_src_maltopuft_backend/core/types/: __init__.py  types.py
src/ska_src_maltopuft_backend/health/: __init__.py  responses.py  router.py
src/ska_src_maltopuft_backend/label/: __init__.py  controller.py  css_color.py  entity.py  models.py  repository.py  requests.py  responses.py  router.py
src/ska_src_maltopuft_backend/models/: __init__.py
src/ska_src_maltopuft_backend/observation/: controller.py  models.py  repository.py  requests.py  responses.py  router.py
src/ska_src_maltopuft_backend/user/: __init__.py  controller.py  models.py  repository.py  requests.py  responses.py  router.py
tests/: conftest.py  extras.py  test_example.py
tests/api/v1/: conftest.py  datagen.py
tests/api/v1/candle/: candidate_api.feature  conftest.py  sp_candidate_api.feature  test_candidate_api_feature.py  test_candidate_feature.py  test_sp_candidate_api_feature.py  test_sp_candidate_feature.py
tests/api/v1/catalogue/: pulsar_catalogue_api.feature  test_pulsar_catalogue_api.py
tests/api/v1/core/: login.feature  test_login_feature.py
tests/api/v1/health/: health.feature  test_health.py  test_health_api_feature.py
tests/api/v1/label/: conftest.py  entity_api.feature  (+6 more)
tests/candle/: candle.feature  candle_extras.feature  test_candle.py  test_candle_extras.py
tests/catalogue/: datagen.py
tests/core/auth/: auth.feature  authentication_dependency.feature  authorization_dependency.feature  conftest.py  test_auth_feature.py  test_authentication_dependency_feature.py  test_authorization_dependency_feature.py
tests/core/controller/: test_label_controller.py
tests/core/database/: database_integration.feature  init_db.feature  test_database_integration.py  test_init_db.py
tests/core/repository/: test_repository_feature.py
tests/core/types/: candle.feature  test_candle.py
tests/integration/: test_get_db.py
tests/label/: label.feature  test_label_feature.py
tests/observation/: datagen.py
(+16 files in other folders)
